Finished up creating all the books routes
