# controllers/booksController.js
@@ -20,7 +20,69 @@ const getById = async (req, res) => {
     })
 }
 
+const createBook = async (req, res) => {
+    //#swagger.tags=['Books']
+    const book = {
+        title: req.body.title,
+        author: req.body.author,
+        genre: req.body.genre,
+        year_published: req.body.year_published,
+        num_pages: req.body.num_pages,
+        best_seller: req.body.best_seller,
+        location: req.body.location,
+        availability: true
+    }
+
+    const result = await mongodb.getDatabase().db().collection('books').insertOne(book)
+
+    if (result.acknowledged) {
+        res.status(201).json({
+            id: result.insertedId
+        })
+    } else {
+        res.status(500).json(result.error || 'Some error occurred while creating the book')
+    }
+}
+
+const updateBook = async (req, res) => {
+    //#swagger.tags=['Books']
+    const bookId = new ObjectId(req.params.id)
+    const book = {
+        title: req.body.title,
+        author: req.body.author,
+        genre: req.body.genre,
+        year_published: req.body.year_published,
+        num_pages: req.body.num_pages,
+        best_seller: req.body.best_seller,
+        location: req.body.location,
+        availability: req.body.availability
+    }
+
+    const result = await mongodb.getDatabase().db().collection('books').replaceOne({ _id: bookId }, book)
+
+    if (result.modifiedCount > 0) {
+        res.status(204).send()
+    } else {
+        res.status(500).json(result.error || 'Some error occurred while updating the book')
+    }
+}
+
+const deleteBook = async (req, res) => {
+    //#swagger.tags=['Books']
+    const bookId = new ObjectId(req.params.id)
+    const result = await mongodb.getDatabase().db().collection('books').deleteOne({ _id: bookId })
+
+    if (result.deletedCount > 0) {
+        res.status(204).send()
+    } else {
+        res.status(500).json(result.error || 'Some error occurred while deleting the book')
+    }
+}
+
 module.exports = {
     getAll,
-    getById
+    getById,
+    createBook,
+    updateBook,
+    deleteBook
 }
